--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 1.1.0
 homepage: https://github.com/arthas1888/flutter_pos_printer_platform
 
 environment:
-  sdk: '>=2.18.4 <3.3.10'
-  flutter: ">=1.20.0"
+  sdk: '>=3.0.1 <4.0.0'
+#  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
